--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: pip install requirements.txt
+      - run: pip install -r requirements.txt
       - run: pytest --cov=blockchain test_blockchain.py 
       - run: pytest --cov=server test_server.py 
       - run: echo "🍏 This job's status is ${{ job.status }}."
