--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
 py==1.11.0
+pycodestyle==2.9.1
 pyparsing==3.0.9
 pytest==7.1.3
 pytest-cov==3.0.0
