--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
-      - run: pip install -r requirements.txt
+      - run: pipenv install
       - run: pycodestyle .
-      - run: pytest --cov=blockchain test_blockchain.py 
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: pipenv shell
+      - run: py.test
