--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10' 
+      - run: pip install
       - run: pipenv install
       - run: pycodestyle .
       - run: pipenv shell
