--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,13 +1,26 @@
-name: GitHub Actions Demo
+name: Python actions
 on: [push]
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Check repository
+        uses: actions/checkout@v3
+
+      - name: Setup python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10' 
-      - run: pip install -r requirements.txt
-      - run: pycodestyle .
-      - run: py.test
+          python-version: '3.10'
+
+      - name: Setup pipenv
+        run: python -m pip install --upgrade pipenv wheel
+
+      - name: Install pipenv requirements
+        run: |
+          pipenv install
+
+      - name: Run linter
+        run: pipenv run pycodestyle .
+
+      - name: Run test
+        run: pipenv run py.test
