--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,8 @@
 name: Python actions
 on: [push]
+
 jobs:
-  Explore-GitHub-Actions:
+  test
     runs-on: ubuntu-latest
     steps:
       - name: Check repository
@@ -15,9 +16,16 @@ jobs:
       - name: Setup pipenv
         run: python -m pip install --upgrade pipenv wheel
 
-      - name: Install pipenv requirements
+      - id: cache-pipenv
+        uses: actions/cache@v1
+        with:
+          path: ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          pipenv install
+          pipenv install --deploy --dev
 
       - name: Run linter
         run: pipenv run pycodestyle .
