--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -31,4 +31,4 @@ jobs:
         run: pipenv run pycodestyle .
 
       - name: Run test
-        run: pipenv run py.test
+        run: pipenv run python pytest -vv -cov -q .
