--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,8 +1,7 @@
 name: Python actions
 on: [push]
-
 jobs:
-  test:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
       - name: Check repository
@@ -14,7 +13,6 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
@@ -22,6 +20,4 @@ jobs:
       - name: Run linter
         run: pycodestyle .
 
-      - name: Test with pytest
-        run: |
-          pytest
+      - run: pytest
