--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
+aniso8601==9.0.1
 attrs==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.1.1
 click==8.1.3
 coverage==6.4.4
+distlib==0.3.6
+filelock==3.8.0
 Flask==2.2.2
+Flask-RESTful==0.3.9
 freezegun==1.2.2
 idna==3.3
 iniconfig==1.1.1
@@ -11,16 +15,23 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonify==0.5
 MarkupSafe==2.1.1
+merkletools==1.0.3
 packaging==21.3
+pipenv==2022.9.8
+platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.9.1
 pyparsing==3.0.9
+pysha3==1.0.2
 pytest==7.1.3
 pytest-cov==3.0.0
 python-dateutil==2.8.2
+pytz==2022.2.1
 requests==2.28.1
 six==1.16.0
 tomli==2.0.1
 urllib3==1.26.12
+virtualenv==20.16.5
+virtualenv-clone==0.5.7
 Werkzeug==2.2.2
